--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@inertiajs/react": "^1.0.16",
         "@vitejs/plugin-react": "^4.2.1",
         "bootstrap": "^5.3.3",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "sass": "^1.77.1"
     }
 }
