--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.2",
         "@inertiajs/react": "^1.0.16",
         "@vitejs/plugin-react": "^4.2.1",
         "bootstrap": "^5.3.3",
